feat: pipeline logic
--> next step will consist to implement the cross-validation

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,6 @@ Thumbs.db
 /data/input/training_data/pseudo_testing_data_with_truth
 /data/output/pseudo_testing
 /data/output/testing/
+
+/submission/phase_1/rul_survival_predictor*
+/submission/phase_1/submission_cross-val*
